--- a/davidwhitcomecom/src/styles.scss
+++ b/davidwhitcomecom/src/styles.scss
@@ -28,18 +28,13 @@ h4,
 h5 {
     margin: 0;
     font-family: -apple-system, 'Open Sans', 'Arial', sans-serif;
+    color: #1e1e1e;
 }
 
 h3 {
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 10px;
-}
-
-h3,
-h4,
-h5 {
-    color: #1e1e1e;
 }
 
 h4 {
@@ -58,13 +53,6 @@ h5 {
     max-width: 1100px;
     margin: 0 auto;
     padding: 0 20px;
-
-    p {
-        color: #1e1e1e;
-        font-size: 1em;
-        line-height: 25px;
-        margin: 2px 0px 9px 0px;
-    }
 }
 
 .section {
